Modify dockerfile (#7)
* fix issue

* fix issue

* Modify dockerfile

* modify jdk version

* modify pipeline

Co-authored-by: Su, Chen <chen.su@sap.com>